--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.29.0",
+    "@metaplex-foundation/js": "^0.20.1",
     "@radix-ui/themes": "^2.0.3",
+    "@solana/spl-token": "^0.4.1",
+    "@solana/spl-token-registry": "^0.2.4574",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-solflare": "^0.6.28",
+    "@solana/wallet-adapter-wallets": "^0.19.26",
     "@solana/web3.js": "^1.90.1",
     "@tanstack/react-query": "^5.24.7",
     "@tanstack/react-query-next-experimental": "^5.24.7",
+    "framer-motion": "^11.0.8",
     "jotai": "^2.7.0",
+    "lodash": "^4.17.21",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
@@ -26,6 +32,7 @@
     "react-no-ssr": "^1.1.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
