--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@solana/web3.js": "^1.90.1",
     "@tanstack/react-query": "^5.24.7",
     "@tanstack/react-query-next-experimental": "^5.24.7",
+    "classnames": "^2.5.1",
     "framer-motion": "^11.0.8",
     "jotai": "^2.7.0",
     "lodash": "^4.17.21",
