fix: fix isPoolInitialized value

--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "@metaplex-foundation/js": "^0.20.1",
     "@radix-ui/themes": "^2.0.3",
     "@solana/spl-token": "^0.4.1",
-    "@solana/spl-token-registry": "^0.2.4574",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
-    "@solana/wallet-adapter-solflare": "^0.6.28",
-    "@solana/wallet-adapter-wallets": "^0.19.26",
+    "@solana/wallet-adapter-wallets": "^0.19.30",
     "@solana/web3.js": "^1.90.1",
     "@tanstack/react-query": "^5.24.7",
     "@tanstack/react-query-next-experimental": "^5.24.7",
+    "@trezor/connect-web": "^9.2.1",
     "bignumber.js": "^9.1.2",
     "classnames": "^2.5.1",
     "framer-motion": "^11.0.8",
