feat: update pragrom id

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_PROGRAM_ID=CHSGKu3ZYsUEJYP9KqpfXmmBgkTKPK26vcL383Dt5qMV
+# NEXT_PUBLIC_PROGRAM_ID=CHSGKu3ZYsUEJYP9KqpfXmmBgkTKPK26vcL383Dt5qMV
+NEXT_PUBLIC_PROGRAM_ID=5bie1DThPmPKERXFvdRuxjG7a7adULJhkLpAWEtyWRqe
